force-app/main/default/objects/Office_hz__c/Office_hz__c.object-meta.xml
<CustomObject>
    <label>Office</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>