force-app/main/default/objects/Office_hz__c/fields/BackAgentGuid__c.field-meta.xml
<CustomField>
    <fullName>BackAgentGuid__c</fullName>
    <label>Back Office GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>