force-app/main/default/objects/Office_hz__c/fields/BostonDotComCompanyId__c.field-meta.xml
<CustomField>
    <fullName>BostonDotComCompanyId__c</fullName>
    <label>Boston.com Company ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>