force-app/main/default/objects/Office_hz__c/fields/DisplayAgents__c.field-meta.xml
<CustomField>
    <fullName>DisplayAgents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Agents</label>
    <type>Checkbox</type>
</CustomField>