force-app/main/default/objects/Office_hz__c/fields/DisplayEmployees__c.field-meta.xml
<CustomField>
    <fullName>DisplayEmployees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Employees</label>
    <type>Checkbox</type>
</CustomField>