force-app/main/default/objects/Office_hz__c/fields/DisplayOnWebsite__c.field-meta.xml
<CustomField>
    <fullName>DisplayOnWebsite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display On Website</label>
    <type>Checkbox</type>
</CustomField>