force-app/main/default/objects/Office_hz__c/fields/ExternalUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>ExternalUpdatedDate__c</fullName>
    <label>External Updated Date</label>
    <type>DateTime</type>
</CustomField>