force-app/main/default/objects/Office_hz__c/fields/Franchise__c.field-meta.xml
<CustomField>
    <fullName>Franchise__c</fullName>
    <label>Franchise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>