force-app/main/default/objects/Office_hz__c/fields/InstagramUrl__c.field-meta.xml
<CustomField>
    <fullName>InstagramUrl__c</fullName>
    <label>Instagram URL</label>
    <type>Url</type>
</CustomField>