force-app/main/default/objects/Office_hz__c/fields/MailingStreet1__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet1__c</fullName>
    <label>Mailing Street (Line 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>