force-app/main/default/objects/Office_hz__c/fields/MailingStreet2__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet2__c</fullName>
    <label>Mailing Street (Line 2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>