force-app/main/default/objects/Office_hz__c/fields/OfficeEmail__c.field-meta.xml
<CustomField>
    <fullName>OfficeEmail__c</fullName>
    <label>Office Email</label>
    <type>Email</type>
</CustomField>