force-app/main/default/objects/Office_hz__c/fields/OfficeSiteUrl__c.field-meta.xml
<CustomField>
    <fullName>OfficeSiteUrl__c</fullName>
    <label>Office Site URL</label>
    <type>Url</type>
</CustomField>