force-app/main/default/objects/Office_hz__c/fields/PinterestUrl__c.field-meta.xml
<CustomField>
    <fullName>PinterestUrl__c</fullName>
    <label>Pinterest URL</label>
    <type>Url</type>
</CustomField>