force-app/main/default/objects/Office_hz__c/fields/ProfilePhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>ProfilePhotoUrl__c</fullName>
    <label>Profile Photo URL</label>
    <type>Url</type>
</CustomField>