force-app/main/default/objects/Office_hz__c/fields/RfgCompanyId__c.field-meta.xml
<CustomField>
    <fullName>RfgCompanyId__c</fullName>
    <label>RFG Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>