force-app/main/default/objects/Office_hz__c/fields/RfgOfficeId__c.field-meta.xml
<CustomField>
    <fullName>RfgOfficeId__c</fullName>
    <label>RFG Office ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>