force-app/main/default/objects/Office_hz__c/fields/TumblrUrl__c.field-meta.xml
<CustomField>
    <fullName>TumblrUrl__c</fullName>
    <label>Tumblr URL</label>
    <type>Url</type>
</CustomField>