force-app/main/default/objects/Office_hz__c/fields/WebsiteId__c.field-meta.xml
<CustomField>
    <fullName>WebsiteId__c</fullName>
    <externalId>true</externalId>
    <label>Website ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>