force-app/main/default/objects/Office_hz__c/fields/YelpUrl__c.field-meta.xml
<CustomField>
    <fullName>YelpUrl__c</fullName>
    <label>Yelp URL</label>
    <type>Url</type>
</CustomField>